appId: "com.nhanluong.vifinapp"
---
- launchApp
- waitForAnimationToEnd

- tapOn: "Email"
- inputText: "l@gmail.com"

- tapOn: "Enter your password"
- inputText: "nHAN@281204"

- tapOn: "Sign In"
